# 100day_challenge_backend

./: .gitignore  .golangci.yml  .tool-versions  CLAUDE.md  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
3day_matching_app/: package.json  tailwind.config.js
day10_graphql_media_app/: README.md  package-lock.json  package.json
day11_lights_out/: README.md  package-lock.json  package.json
day12_interactive_data_explorer/: README.md  biome.json  next.config.mjs  package-lock.json  package.json
day13_raft_simulator/: README.md  package-lock.json  package.json  tsconfig.json
day14_bff_dashboard/: README.md  package-lock.json  package.json
day15_credit_card_workflow/: README.md  package-lock.json  package.json
day16_pokemon_search/: README.md  docker-compose.yml  package-lock.json  package.json
day17_mcp_pokemon/: Makefile  README.md  config.json  go.mod  go.sum  main.go
day18_expandable_api/: README.md  package-lock.json  package.json  tailwind.config.ts
day19_job_scheduler/: README.md  package-lock.json  package.json  test-api.ts
day1_todo_app/: .air.toml  .editorconfig  Taskfile.yml  docker-compose.yml  go.mod  go.sum  init.sql
day20_sql_parser/: README.md  go.mod  main.go  template.html
day21_reservation_system/: README.md  package-lock.json  package.json
day22_distributed_cache/: README.md  package-lock.json  package.json  tailwind.config.ts
day23_image_resizer_api/: README.md  package-lock.json  package.json
day24_simple_rag/: README.md  package-lock.json  package.json  tsconfig.seed.json
day25_geohash_nearby_search/: README.md  package-lock.json  package.json
day26_timeseries_db/: README.md  package-lock.json  package.json  tailwind.config.ts
day27_http_simulator/: README.md  package-lock.json  package.json
day28_prefix_typing_racer/: README.md  package-lock.json  package.json
day29-fireworks-controller/: Makefile  PROJECT  README.md  go.mod
day29_etl_pipeline/: README.md  package-lock.json  package.json
day2_simple_ec/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json
day30_fsm_visualizer/: README.md  package-lock.json  package.json
day31_go_orm/: README.md  go.mod  go.sum  orm_shell.db
day32_userspace_net/: README.md  cert.pem  crypto.go  go.mod  go.sum  http.go  http2.go  icmp.go  ip.go  ip_parser  key.pem  main.go  tcp.go  tls.go  tun.go
day33_zkp_demo/: README.md  package-lock.json  package.json
day34_btree_db/: .gitignore  README.md  btree.go  btree_delete.go  btree_delete_test.go  db.go  (+33 more)
day62_rust_jit_compiler/backend/: Cargo.toml
day62_rust_jit_compiler/backend/src/: main.rs
day62_rust_jit_compiler/backend/src/api/: mod.rs
day62_rust_jit_compiler/backend/src/ast/: mod.rs
day62_rust_jit_compiler/backend/src/interpreter/: mod.rs
day62_rust_jit_compiler/backend/src/jit/: codegen.rs  mod.rs
day62_rust_jit_compiler/backend/src/lexer/: mod.rs
day62_rust_jit_compiler/backend/src/parser/: mod.rs
day64_cpp_game_engine/: CMakeLists.txt  PROGRESS.md
day64_cpp_game_engine/src/: main.cpp
day64_cpp_game_engine/src/ecs/: Component.cpp  Component.h  Entity.cpp  Entity.h  System.cpp  System.h  World.h
day64_cpp_game_engine/src/ecs/components/: Transform.h
day64_cpp_game_engine/src/ecs/systems/: TestSystem.h
(+2406 files in other folders)
