[package]
name = "rust_jit_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web Framework (Phase 4で追加予定)
# axum = "0.5"
# tokio = { version = "1.0", features = ["full"] }
# tower = "0.4"
# tower-http = { version = "0.3", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JIT & Assembly
# mmap = "0.1"
# libc = "0.2"

# Development & Debug
anyhow = "1.0"
# uuid = { version = "1.0", features = ["v4"] }
