[package]
name = "rust_jit_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Simple HTTP Server (Rust 1.57対応)
# axum = "0.3"
# tokio = { version = "1.14", features = ["full"] }
# tower = "0.4.10"
# tower-http = { version = "0.1", features = ["cors"] }
# hyper = "0.14"

# JSON シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JIT & Assembly (実行可能メモリ機能は無効化)
# libc = "0.2"

# Development & Debug
anyhow = "1.0"

# 軽量HTTP (標準ライブラリベース)
# 今回は自作の簡単なHTTPサーバーとして実装
# uuid = { version = "1.0", features = ["v4"] }
